# Context-Bridge

./: .gitignore  README.md  debug_codex.py  pb_extractor.py  pyproject.toml
context-bridge-exports/: forensics-codex-20260412_202903.json
context_bridge/: __init__.py  cli.py  emitter.py  models.py  normalizer.py  tui.py  ui.py
context_bridge/connectors/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  cursor.py
context_bridge/extractors/: __init__.py  cdp_extractor.py  jsonl_parser.py  sqlite_reader.py
test-exports/: forensics-codex-20260412_200314.json  forensics-cursor-20260412_200122.json
test-exports/codex_019d79fa_20260412_200111/: bootstrap.md  bridge-session.json
test-exports/codex_019d79fa_20260412_201740/: bootstrap.md  bridge-session.json
test-exports/codex_019d79fa_20260412_202036/: bootstrap.md  bridge-session.json
test-imports/universal_019d79fa/antigravity/context-bridge/: BOOTSTRAP.md  FILES.md
test-imports/universal_019d79fa/codex/: rollout-019d79fa.jsonl
test-imports/universal_019d79fa/cursor/context-bridge/: BOOTSTRAP.md  CONTEXT.md
