[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-bridge"
version = "1.0.0"
description = "Transfer AI session context between coding IDEs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Context Bridge Contributors" },
]
keywords = ["ai", "ide", "context", "bridge", "codex", "cursor", "antigravity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "pydantic>=2",
    "textual>=0.60",
    "click>=8",
]

[project.optional-dependencies]
leveldb = ["plyvel>=1.5"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[project.scripts]
cb = "context_bridge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["context_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
